TFP-3051 Ta hensyn til velferdspermisjon i beregning av utbetalingsgrad (#962)